[gd_scene load_steps=7 format=3 uid="uid://b3a1xt4lb6cwb"]

[ext_resource type="Script" path="res://levels/day_start_screen.gd" id="1_330it"]
[ext_resource type="Theme" uid="uid://h3cf26orkoyx" path="res://temporary_assets/transition/level_transition_text.tres" id="1_lrg0w"]
[ext_resource type="Theme" uid="uid://b6lwe4pm4u5aq" path="res://temporary_assets/transition/main_text_theme.tres" id="2_f5d62"]
[ext_resource type="Theme" uid="uid://cpc1n6gjq3k44" path="res://temporary_assets/transition/heade_text_theme.tres" id="3_4o8np"]

[sub_resource type="Animation" id="Animation_qrscc"]
resource_name = "level_start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("screen_control/CenterContainer3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("screen_control/CenterContainer2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("screen_control/CenterContainer5:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("screen_control/CenterContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("screen_control/CenterContainer4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("screen_control/AM:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("screen_control/x_days:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("screen_control/weekday:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("screen_control/dayword:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("screen_control/CenterContainer3:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.450625, 4.5),
"update": 0,
"values": [Vector2(155, 127), Vector2(155, 17)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = false
tracks/10/path = NodePath("screen_control/CenterContainer2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(235, 127), Vector2(235, 17)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("screen_control/CenterContainer3:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("screen_control/CenterContainer5:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(315, 127), Vector2(315, 17)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("screen_control/CenterContainer5:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("screen_control/CenterContainer:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(355, 127), Vector2(355, 17)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("screen_control/CenterContainer:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("screen_control/CenterContainer4:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(435, 127), Vector2(435, 17)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("screen_control/CenterContainer4:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("screen_control/AM:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(518, 132), Vector2(518, 12)]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("screen_control/AM:modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("screen_control/x_days:position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(2.1, 2.6),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(121, 192), Vector2(325, 192)]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("screen_control/weekday:position")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(2.1, 2.6),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(220, 151), Vector2(320, 151)]
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("screen_control/dayword:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(2.1, 2.6),
"transitions": PackedFloat32Array(0.45, 4.5),
"update": 0,
"values": [Vector2(232, 156), Vector2(132, 156)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dp2ah"]
_data = {
"level_start": SubResource("Animation_qrscc")
}

[node name="day_start_screen" type="Node2D"]
script = ExtResource("1_330it")

[node name="screen_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -35.0
offset_right = 607.0
offset_bottom = 359.0

[node name="CenterContainer3" type="CenterContainer" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 2
offset_left = 155.0
offset_top = 127.0
offset_right = 225.0
offset_bottom = 232.0
grow_vertical = 2

[node name="time1" type="RichTextLabel" parent="screen_control/CenterContainer3"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("1_lrg0w")
text = "0"
fit_content = true

[node name="CenterContainer2" type="CenterContainer" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 2
offset_left = 235.0
offset_top = 127.0
offset_right = 305.0
offset_bottom = 232.0
grow_vertical = 2

[node name="day_indicator" type="RichTextLabel" parent="screen_control/CenterContainer2"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("1_lrg0w")
text = "2"
fit_content = true

[node name="CenterContainer5" type="CenterContainer" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 2
offset_left = 315.0
offset_top = 127.0
offset_right = 385.0
offset_bottom = 232.0
grow_vertical = 2

[node name="colon" type="RichTextLabel" parent="screen_control/CenterContainer5"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("1_lrg0w")
text = ":"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 355.0
offset_top = -52.5
offset_right = 425.0
offset_bottom = 52.5
grow_vertical = 2

[node name="time2" type="RichTextLabel" parent="screen_control/CenterContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("1_lrg0w")
text = "3"
fit_content = true

[node name="CenterContainer4" type="CenterContainer" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 435.0
offset_top = -52.5
offset_right = 505.0
offset_bottom = 52.5
grow_vertical = 2

[node name="time3" type="RichTextLabel" parent="screen_control/CenterContainer4"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("1_lrg0w")
text = "4"
fit_content = true

[node name="AM" type="RichTextLabel" parent="screen_control"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 518.0
offset_top = 132.0
offset_right = 568.0
offset_bottom = 172.0
theme = ExtResource("2_f5d62")
text = "AM"
fit_content = true
autowrap_mode = 2

[node name="x_days" type="RichTextLabel" parent="screen_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 121.0
offset_top = 192.0
offset_right = 480.999
offset_bottom = 232.0
theme = ExtResource("3_4o8np")
theme_override_font_sizes/normal_font_size = 24
text = "X Days Before Finals"
fit_content = true

[node name="weekday" type="RichTextLabel" parent="screen_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 220.0
offset_top = 151.0
offset_right = 510.0
offset_bottom = 191.0
theme = ExtResource("2_f5d62")
text = "XXXXDay"
fit_content = true

[node name="dayword" type="RichTextLabel" parent="screen_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 232.0
offset_top = 156.0
offset_right = 312.0
offset_bottom = 196.0
theme = ExtResource("2_f5d62")
text = "Day"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dp2ah")
}
